2007-07-27  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Collect all the required package versions in one place and
	explicitly require GTK+ 2.10 or higher.  (#380534)

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.5 release

2007-09-09  Matthew Barnes  <mbarnes@redhat.com>

	* calendar/e-cal-backend-exchange-calendar.c
	(process_delegated_cal_object), (find_attendee_prop):
	* camel/camel-exchange-folder.c (get_message):
	* mail/mail-stub-exchange.c (mse_get_folder_online_sync_updates):
	* mail/mail-utils.c (mail_util_demangle_delegated_meeting),
	(mail_util_demangle_delegated_meeting):
	Fix newly introduced compiler warnings as well as a memory leak.

2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c:
	(process_delegated_cal_object), (find_attendee_prop),
	(create_object), (modify_object_with_href):
	* calendar/e-cal-backend-exchange.c: (get_cal_owner),
	(e_cal_backend_exchange_get_sender),
	(e_cal_backend_exchange_get_sender_string),
	(e_cal_backend_exchange_get_owner_name):
	* calendar/e-cal-backend-exchange.h:
	* camel/camel-exchange-folder.c: (get_message),
	(camel_exchange_folder_construct):
	* mail/mail-stub-exchange.c: (unmangle_delegated_meeting_request),
	(unmangle_sender_field), (get_message):
	* mail/mail-utils.c: (mail_util_demangle_sender_field),
	(mail_util_demangle_delegated_meeting):
	* mail/mail-utils.h: Adding the delegation feature.

	Committing on behalf of Suman Manjunath <msuman@novell.com> and 
	Bharath Acharya <abharath@novell.com>	

2007-07-08  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #442186, part of 341214 and #421091
	This set of fixes changes the very basic behaviour of folder
	loading in Exchange.  This version of Evolution-exchange should
	work much much much better for those having relatively big mail