@@ -1,3 +1,10 @@
+2007-07-30  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	* camel/camel-exchange-folder.c: (get_message): Removed all the 
+	unnecessary piece of code. 
+
+	Committing on behalf of Bharath Acharya <abharath@novell.com>	
+
 2007-07-27  Matthew Barnes  <mbarnes@redhat.com>
 
 	* configure.in:
